        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="22dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/identyfikator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_jednosstki" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView1"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="wpisz identyfikator" />

                <TextView
                    android:id="@+id/Opis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_jednostki"
                     />

                <MultiAutoCompleteTextView
                    android:id="@+id/multiAutoCompleteTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:text="Opis Lokalizacji" />

                <TextView
                    android:id="@+id/el_madrz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_jednotki_nadrz"
                     />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView2"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="Identyfikator jednostki nadrzednej" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_jednotki_nadrz"
                     />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Nazwa jednostki w której skład wchodzi" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adres"
                     />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ulica"
                         />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView3"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kod_pocztowy"
                         />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView4"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miejscowosc"
                         />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView5"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budynek"
                         />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView6"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pietro"
                         />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numer_pomieszczenia"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nazwa_pomieszczenia"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:text="AutoCompleteTextView" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>
        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right|clip_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="ZAPISZ" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="POKAZ LISTE" />
    </LinearLayout>
  
    </LinearLayout>

